fix: prevent horizontal scroll in edit mode
(cherry picked from commit 8590b25b19c489b6825d640ce117edab75379699)

--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -311,6 +311,7 @@
 	display: flex;
 	gap: 6px;
 	width: 0;
+	overflow: hidden;
 }
 .standard-sidebar-item[data-name="add-sidebar-item"] {
 	margin-top: 5px;
